# InteractivePatchComparison

./: .gitmodules  AveragePixelDifference.hpp  AverageScore.hpp  CMakeLists.txt  CorrelationScore.hpp  CustomImageStyle.cxx  CustomImageStyle.h  CustomTrackballStyle.cxx  CustomTrackballStyle.h  DiffusionDistance.cpp  DiffusionDistance.h  DiffusionDistance.hpp  DiffusionDistanceTest.cpp  DiffusionPatches.cpp  ExamplePatchDifference.cpp  Form.cxx  Form.h  Form.ui  Helpers.cpp  Helpers.h  Helpers.hxx  Interactive.cpp  InteractivePatchComparisonWidget.cpp  InteractivePatchComparisonWidget.cxx  InteractivePatchComparisonWidget.h  InteractivePatchComparisonWidget.ui  Layer.cpp  Layer.h  Mask.cpp  Mask.h  OddValidator.cpp  OddValidator.h  PatchInfoWidget.cpp  PatchInfoWidget.cxx  PatchInfoWidget.h  PatchInfoWidget.hpp  PatchInfoWidget.ui  PixelDifferences.hpp  PixmapDelegate.cpp  PixmapDelegate.h  (+23 more)
